feat(EID-3004) - initialize creates new statuslist in registry